Tue Aug  9 16:45:53 1994  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in: oops forgot about $(COMERRLIB)
