@@ -1,6 +1,8 @@
 AC_INIT(mailquery.c)
 WITH_CCOPTS
 AC_SET_BUILDTOP
+AC_PROG_INSTALL
+WITH_KRB5ROOT
 CONFIG_RULES
 AC_FUNC_CHECK(strerror,AC_DEFINE(HAS_STRERROR))
 KRB_INCLUDE
